# saml-app

./: .gitignore  Makefile  README.md  pyproject.toml
app/: __init__.py  auth.py  config.py  main.py
app/static/: index.html
app/static/js/: app.js
