# pyproject.toml
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saml-app"
version = "0.1.0"
description = "FastAPI Auth0 OAuth Integration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Sumeet Rohatgi", email = "sumeet.rohatgi@bd.com"}
]
dependencies = [
    "fastapi[standard]>=0.103.1",
    "uvicorn>=0.23.2",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "python-jose>=3.3.0",
    "cryptography>=41.0.3",
    "jinja2>=3.1.2",
    "pydantic-settings>=2.8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.0.285",
]

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "B", "I"]
